--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -49,5 +49,5 @@ jobs:
           docker pull $SWR_IMAG
           docker stop DemoWeb || true
           docker rm DemoWeb || true
-          docker run -d -p 80:8080 --name DemoWeb $SWR_IMAGE
+          docker run --pull=always -d -p 80:8080 --name DemoWeb $SWR_IMAGE
         EOF
